fix: collapse

--- a/src/style/_collapse.scss
+++ b/src/style/_collapse.scss
@@ -44,7 +44,6 @@
             color: $text-red;
             transition: all 0.3s ease-in-out;
             padding: 20px 0;
-            text-align: left(12px);
         }
         
     } 
